# Changelog
# https://dev.mysql.com/doc/relnotes/connector-j/8.0/en/

Version 8.0.22

  - WL#14115, Support for authentication_ldap_sasl_client(SCRAM-SHA-1) authentication plugin.

  - WL#14096, Add option to specify LOAD DATA LOCAL allow list folder.

  - WL#13780, Skip system-wide trust and key stores (incl. X DevAPI client certs).

  - WL#14017, XProtocol -- support for configurable compression algorithms.

  - Fix for Bug#92903 (28834903), MySQL Connector/j should support wildcard names or alternative names.

  - Fix for Bug#99767 (31443178), Contribution: Check SubjectAlternativeName for TLS instead of commonName.
    Thanks to Daniël van Eeden for his contribution.

  - Fix for Bug#93444 (29015453), LOCALDATETIME PARAMETER VALUES ALTERED WHEN CLIENT AND SERVER TIMEZONES DIFFER.
    Thanks to Iwao Abe for his contribution.

  - WL#14052, Remove asynchronous variant of X Protocol.

  - Fix for Bug#99713 (31418928), NPE DURING COM.MYSQL.CJ.SERVERPREPAREDQUERYBINDVALUE.STOREDATE().

  - WL#14068, Remove legacy integration with JBoss.

Version 8.0.21

  - WL#14051, Upgrade Protocol Buffers dependency to protobuf-java-3.11.4.

  - WL#14042, Upgrade testsuite to JUnit 5.

  - Fix for Bug#98237 (30911870), PREPAREDSTATEMENT.SETOBJECT(I, "FALSE", TYPES.BOOLEAN) ALWAYS SETS TRUE OR 1.

  - WL#13008, DevAPI: Add schema validation to create collection.

Version 8.0.20

  - Fix for Bug#30805426, IN CASE OF ISAUTHMETHODSWITCHREQUESTPACKET , TOSERVERS > 1 ARE IGNORED.

  - Fix for Bug#97714 (30570249), Contribution: Expose elapsed time for query interceptor to avoid hacky thread local implementations.
    Thanks to Matti Sillanpää and Johnathan Crawford for their contribution.

  - Fix for Bug#97724 (30570721), Contribution: Allow \'3.\' formatted numbers.
    Thanks to Nick Pollett for his contribution.

  - Fix for Bug#98536 (30877755), SIMPLEDATEFORMAT COULD CACHE A WRONG CALENDAR.

  - Fix for Bug#91112 (28125069), AGAIN WRONG JAVA.SQL.DATE.
