@@ -40,6 +40,7 @@ import java.util.concurrent.locks.Lock;
 import java.util.concurrent.locks.ReentrantLock;
 
 import com.mysql.cj.MysqlConnection;
+import com.mysql.cj.conf.PropertyDefinitions;
 import com.mysql.cj.protocol.NetworkResources;
 
 /**
@@ -50,29 +51,34 @@ public class AbandonedConnectionCleanupThread implements Runnable {
     private static final Set<ConnectionFinalizerPhantomReference> connectionFinalizerPhantomRefs = ConcurrentHashMap.newKeySet();
     private static final ReferenceQueue<MysqlConnection> referenceQueue = new ReferenceQueue<>();
 
-    private static final ExecutorService cleanupThreadExcecutorService;
+    private static final ExecutorService cleanupThreadExecutorService;
     private static Thread threadRef = null;
     private static Lock threadRefLock = new ReentrantLock();
+    private static boolean abandonedConnectionCleanupDisabled = Boolean.getBoolean(PropertyDefinitions.SYSP_disableAbandonedConnectionCleanup);
 
     static {
-        cleanupThreadExcecutorService = Executors.newSingleThreadExecutor(r -> {
-            Thread t = new Thread(r, "mysql-cj-abandoned-connection-cleanup");
-            t.setDaemon(true);
-            // Tie the thread's context ClassLoader to the ClassLoader that loaded the class instead of inheriting the context ClassLoader from the current
-            // thread, which would happen by default.
-            // Application servers may use this information if they attempt to shutdown this thread. By leaving the default context ClassLoader this thread
-            // could end up being shut down even when it is shared by other applications and, being it statically initialized, thus, never restarted again.
+        if (abandonedConnectionCleanupDisabled) {
+            cleanupThreadExecutorService = null;
+        } else {
+            cleanupThreadExecutorService = Executors.newSingleThreadExecutor(r -> {
+                Thread t = new Thread(r, "mysql-cj-abandoned-connection-cleanup");
+                t.setDaemon(true);
+                // Tie the thread's context ClassLoader to the ClassLoader that loaded the class instead of inheriting the context ClassLoader from the current
+                // thread, which would happen by default.
+                // Application servers may use this information if they attempt to shutdown this thread. By leaving the default context ClassLoader this thread
+                // could end up being shut down even when it is shared by other applications and, being it statically initialized, thus, never restarted again.
 
-            ClassLoader classLoader = AbandonedConnectionCleanupThread.class.getClassLoader();
-            if (classLoader == null) {
-                // This class was loaded by the Bootstrap ClassLoader, so lets tie the thread's context ClassLoader to the System ClassLoader instead.
-                classLoader = ClassLoader.getSystemClassLoader();
-            }
+                ClassLoader classLoader = AbandonedConnectionCleanupThread.class.getClassLoader();
+                if (classLoader == null) {
+                    // This class was loaded by the Bootstrap ClassLoader, so let's tie the thread's context ClassLoader to the System ClassLoader instead.
+                    classLoader = ClassLoader.getSystemClassLoader();
+                }
 
-            t.setContextClassLoader(classLoader);
-            return threadRef = t;
-        });
-        cleanupThreadExcecutorService.execute(new AbandonedConnectionCleanupThread());
+                t.setContextClassLoader(classLoader);
+                return threadRef = t;
+            });
+            cleanupThreadExecutorService.execute(new AbandonedConnectionCleanupThread());
+        }
     }
 
     private AbandonedConnectionCleanupThread() {
@@ -152,7 +158,9 @@ public class AbandonedConnectionCleanupThread implements Runnable {
             // later on. An unchecked shutdown can still be done if needed by calling shutdown(false).
             return;
         }
-        cleanupThreadExcecutorService.shutdownNow();
+        if (cleanupThreadExecutorService != null) {
+            cleanupThreadExecutorService.shutdownNow();
+        }
     }
 
     /**
@@ -193,6 +201,9 @@ public class AbandonedConnectionCleanupThread implements Runnable {
      *            the network resources to close on the connection finalization
      */
     protected static void trackConnection(MysqlConnection conn, NetworkResources io) {
+        if (abandonedConnectionCleanupDisabled) {
+            return;
+        }
         threadRefLock.lock();
         try {
             if (isAlive()) {
